[metadata]
name = proliantutils
summary = Client Library for interfacing with various devices in HP Proliant Servers.
description-file =
    README.rst
license = Apache License, Version 2.0
author = Hewlett Packard Enterprise
author-email = proliantutils@gmail.com
home-page = https://github.com/openstack/proliantutils
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    proliantutils

[entry_points]
ironic_python_agent.hardware_managers =
    hp-proliant = proliantutils.ipa_hw_manager.hardware_manager:ProliantHardwareManager
